--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -11,6 +11,7 @@ dependencies:
     - wandb
     - matplotlib==3.4.2
     - numpy==1.23.5
-    - omegaconf
+    - omegaconf==2.2.3
     - tqdm==4.65.0
-    - torch
+    - torch==2.3.0
+    - torchvision==0.18.0
