--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,23 @@
 defaults:
   - override hydra/launcher: submitit_slurm
 
+ckpt_base_path: /vast/yw4142/checkpoints/dl_final
+
 hydra:
-  job:
-    chdir: True
+  run:
+    dir: ${ckpt_base_path}/outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  sweep:
+    dir: ${ckpt_base_path}/outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+    subdir: ${hydra.job.num}
   launcher:
     submitit_folder: ${hydra.sweep.dir}/.submitit/%j
     nodes: 1
     tasks_per_node: 1
     cpus_per_task: 1
-    mem_gb: 4
-    timeout_min: 5
+    mem_gb: 256
+    gres: "gpu:1"
+    # constraint: "rtx8000"
+    timeout_min: 10080
+    setup: ["export DEBUGVAR=$(scontrol show hostnames $SLURM_JOB_NODELIST)",
+            export MASTER_ADDR="$(scontrol show hostnames $SLURM_JOB_NODELIST | head -n 1)",
+            "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
