--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,13 @@ hydra:
     tasks_per_node: 1
     cpus_per_task: 1
     mem_gb: 6
+    gres: "gpu:1"
     # gres: "gpu:volta:4"
     # constraint: "volta32gb"
     timeout_min: 4320
     setup: ["export DEBUGVAR=$(scontrol show hostnames $SLURM_JOB_NODELIST)",
             export MASTER_ADDR="$(scontrol show hostnames $SLURM_JOB_NODELIST | head -n 1)",
             "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
+
+training:
+  epochs: 100
