--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - override hydra/launcher: submitit_slurm
 
-ckpt_base_path: /vast/yw4142/checkpoints/dl_final
+ckpt_base_path: /vast/th3129/checkpoints/dl_final
 
 hydra:
   run:
@@ -21,8 +21,19 @@ hydra:
     # constraint: "volta32gb"
     timeout_min: 4320
     setup: ["export DEBUGVAR=$(scontrol show hostnames $SLURM_JOB_NODELIST)",
-            export MASTER_ADDR="$(scontrol show hostnames $SLURM_JOB_NODELIST | head -n 1)",
+            "export MASTER_ADDR=$(scontrol show hostnames $SLURM_JOB_NODELIST | head -n 1)",
             "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
 
 training:
   epochs: 100
+
+action_dim: 4
+start_lr: 0.001
+ref_lr: 0.1
+warmup_epochs: 5
+num_epochs: 100
+weight_decay: 0.0001
+final_weight_decay: 0
+final_lr: 1e-5
+use_bfloat16: false
+ipe_scale: 1.0
