--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -1,17 +1,86 @@
 name: dl_final
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - python=3.10
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2024.8.30=hbcca054_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgomp=14.2.0=h77fa898_1
+  - libnsl=2.0.1=hd590300_0
+  - libsqlite=3.47.0=hadc24fc_1
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=he02047a_1
+  - openssl=3.4.0=hb9d3cd8_0
+  - pip=24.3.1=pyh8b19718_0
+  - python=3.10.15=h4a871b0_2_cpython
+  - readline=8.2=h8228510_1
+  - setuptools=75.6.0=pyhff2d567_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tzdata=2024b=hc8b5060_0
+  - wheel=0.45.1=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
   - pip:
-    - hydra-core==1.2.0
-    - hydra-submitit-launcher==1.2.0
-    - wandb
-    - matplotlib==3.4.2
-    - numpy==1.23.5
-    - omegaconf==2.2.3
-    - tqdm==4.65.0
-    - torch==2.3.0
-    - torchvision==0.18.0
+      - antlr4-python3-runtime==4.9.3
+      - certifi==2024.8.30
+      - charset-normalizer==3.4.0
+      - click==8.1.7
+      - cloudpickle==3.1.0
+      - cycler==0.12.1
+      - docker-pycreds==0.4.0
+      - filelock==3.16.1
+      - fsspec==2024.10.0
+      - gitdb==4.0.11
+      - gitpython==3.1.43
+      - hydra-core==1.2.0
+      - hydra-submitit-launcher==1.2.0
+      - idna==3.10
+      - jinja2==3.1.4
+      - kiwisolver==1.4.7
+      - markupsafe==3.0.2
+      - matplotlib==3.4.2
+      - mpmath==1.3.0
+      - networkx==3.4.2
+      - numpy==1.23.5
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.6.85
+      - nvidia-nvtx-cu12==12.1.105
+      - omegaconf==2.2.3
+      - packaging==24.2
+      - pillow==11.0.0
+      - platformdirs==4.3.6
+      - protobuf==5.28.3
+      - psutil==6.1.0
+      - pyparsing==3.2.0
+      - python-dateutil==2.9.0.post0
+      - pyyaml==6.0.2
+      - requests==2.32.3
+      - sentry-sdk==2.19.0
+      - setproctitle==1.3.4
+      - six==1.16.0
+      - smmap==5.0.1
+      - submitit==1.5.2
+      - sympy==1.13.3
+      - torch==2.3.0
+      - torchvision==0.18.0
+      - tqdm==4.65.0
+      - triton==2.3.0
+      - typing-extensions==4.12.2
+      - urllib3==2.2.3
+      - wandb==0.18.7
+prefix: /vast/yw4142/conda_envs/dl_final
