--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,8 @@ defaults:
   - _self_
   - override hydra/launcher: submitit_slurm
 
-ckpt_base_path: /vast/yw4142/checkpoints/dl_final
+ckpt_base_path: /home/yvonne/nyu_courses/dl/checkpoints
+data_path: /home/yvonne/nyu_courses/dl/DL24FA
 
 hydra:
   run:
