--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ defaults:
   - override hydra/launcher: submitit_slurm
 
 ckpt_base_path: ./
-data_path: /scratch/qt2094/DL24FA
+data_path: /scratch/th3129/shared/DL24FA
 
 hydra:
   run:
